@@ -42,7 +42,7 @@
 		<dependency>
 			<groupId>org.postgresql</groupId>
     		<artifactId>postgresql</artifactId>
-    		<version>42.5.2</version>
+    		<version>42.5.4</version>
 		</dependency>
 		-->
 		
@@ -50,7 +50,7 @@
 		<dependency>
 			<groupId>com.oracle.database.jdbc</groupId>
 			<artifactId>ojdbc8</artifactId>
-			<version>21.8.0.0</version>
+			<version>21.9.0.0</version>
 		</dependency>
 		-->
 		
@@ -58,7 +58,7 @@
 		<dependency>
 			<groupId>net.sf.jt400</groupId>
 			<artifactId>jt400</artifactId>
-			<version>11.1</version>
+			<version>11.2</version>
 			<classifier>jt400_jdk8</classifier>
 		</dependency>
 		-->
