@@ -21,7 +21,7 @@
         <pre><code class="xml">&lt;dependency&gt;
     &lt;groupId&gt;net.sf.jt400&lt;/groupId&gt;
     &lt;artifactId&gt;jt400&lt;/artifactId&gt;
-    &lt;version&gt;11.1&lt;/version&gt;
+    &lt;version&gt;11.2&lt;/version&gt;
     &lt;classifier&gt;jt400_jdk8&lt;/classifier&gt;
 &lt;/dependency&gt;
 </code></pre>Quizás ya tengas este código en tu <i>pom.xml</i> pero comentado, en ese caso simplemente descoméntalo.</div>
