@@ -22,7 +22,7 @@
       <pre><code class="xml">&lt;dependency&gt;
     &lt;groupId&gt;org.postgresql&lt;/groupId&gt;
     &lt;artifactId&gt;postgresql&lt;/artifactId&gt;
-    &lt;version&gt;42.5.2&lt;/version&gt;
+    &lt;version&gt;42.5.4&lt;/version&gt;
 &lt;/dependency&gt;
 </code></pre>Quizás ya tengas este código en tu <i>pom.xml</i> pero comentado, en ese caso simplemente descoméntalo.</div>
     <div class="wiki" style="display: block;"> </div>
