@@ -1,6 +1,7 @@
 Change Log for OpenXava project
 ===============================
 
+- Driver version in doc and new projects upgraded for PostgreSQL, Oracle, AS/400.
 - New action in references to clear the reference value just clicking on a button.
 - New action in @DescriptionsList to clear the selected value of the combo just clicking on a button.
 - New article in documentation to use Kotlin to develop with OpenXava in English, Spanish and Chinese.
